Getting started on the UX. The plan is to select the label for Contacts from a spinner and to send it over via Intent. Once a label is set on an edit text it cannot be used again. The Notes label on the contact will allow additional label from the Biz card to be set into the record.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,8 @@
 -->
 <resources>
     <color name="control_background">#cc4285f4</color>
+    <color name="primary">#607D8B</color>
+    <color name="primaryDark">#37474F</color>
+    <color name="accent">#42A5F5</color>
+    <color name="disabledGray">#BDBDBD</color>
 </resources>
