--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -20,7 +20,7 @@
     <ImageButton android:id="@+id/start_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/read_text"
+        android:text="@string/photo"
         android:src="@android:drawable/ic_menu_camera"
         android:onClick="getPhoto"
         android:layout_centerInParent="true" />
