--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:id="@+id/labelText"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    style="?android:attr/dropDownItemStyle"
-    android:textColor="@drawable/spinner_text_color" />
+    android:padding="8dp"
+    style="?android:attr/dropDownItemStyle" />
