Latest stuff. The contact data is getting dropped.

--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -179,7 +179,7 @@
             android:layout_below="@id/cc_edit10"
             android:layout_centerHorizontal="true"
             android:onClick="saveContact"
-            android:src="@android:drawable/ic_menu_camera"
+            android:src="@android:drawable/ic_menu_save"
             android:text="Save" />
 
     </RelativeLayout>
