Set material icons into the spinner display field. Created a clear text x button with logic to connect them to each edit text.

--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -18,13 +18,26 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner1"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner1"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn1"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -34,14 +47,28 @@
             android:layout_below="@id/cc_edit1"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner2"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner2"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn2"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
 
         <Spinner
             android:id="@+id/cc_spinner3"
@@ -50,13 +77,26 @@
             android:layout_below="@id/cc_edit2"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner3"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner3"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn3"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -66,13 +106,26 @@
             android:layout_below="@id/cc_edit3"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner4"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner4"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn4"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -82,13 +135,26 @@
             android:layout_below="@id/cc_edit4"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner5"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner5"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn5"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -98,13 +164,26 @@
             android:layout_below="@id/cc_edit5"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner6"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner6"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn6"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -114,13 +193,26 @@
             android:layout_below="@id/cc_edit6"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner7"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner7"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn7"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -130,13 +222,26 @@
             android:layout_below="@id/cc_edit7"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner8"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner8"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn8"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -146,13 +251,26 @@
             android:layout_below="@id/cc_edit8"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner9"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner9"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="@id/cc_btn9"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <Spinner
@@ -162,13 +280,26 @@
             android:layout_below="@id/cc_edit9"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
-
+        <ImageButton
+            android:id="@+id/cc_btn10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/cc_spinner10"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="6dp"
+            android:layout_marginLeft="4dp"
+            android:src="@drawable/close_btn"
+            android:background="@null"
+            android:onClick="clearText"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
         <EditText
             android:id="@+id/cc_edit10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner10"
             android:layout_marginTop="6dp"
+            android:layout_marginRight="36dp"
+            android:tag="id/cc_btn10"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
         <ImageButton
@@ -179,7 +310,7 @@
             android:layout_below="@id/cc_edit10"
             android:layout_centerHorizontal="true"
             android:onClick="saveContact"
-            android:src="@android:drawable/ic_menu_save"
+            android:src="@drawable/btn_save"
             android:text="Save" />
 
     </RelativeLayout>
