--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -12,10 +12,19 @@
     <TextView android:id="@+id/start_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_centerHorizontal="true"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Snap a card" />
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/preface" />
+
+    <ImageButton android:id="@+id/start_gallery"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="@string/gallery"
+        android:src="@android:drawable/ic_menu_gallery"
+        android:onClick="getPhoto"
+        android:layout_centerInParent="true" />
 
     <ImageButton android:id="@+id/start_photo"
         android:layout_width="wrap_content"
@@ -23,6 +32,7 @@
         android:text="@string/photo"
         android:src="@android:drawable/ic_menu_camera"
         android:onClick="getPhoto"
-        android:layout_centerInParent="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_above="@id/start_gallery" />
 
 </RelativeLayout>
