Cleared log cruft. Fixed an issue with duplicated field types. Dropped extra dialog class.

--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -11,13 +11,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="12dp"
         android:layout_centerHorizontal="true"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Snap a card" />
-    <View android:id="@+id/dlg_spacer"
-        android:layout_centerInParent="true"
-        android:layout_width="1dp"
-        android:layout_height="1dp"/>
     <ImageButton android:id="@+id/dlg_retry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -25,10 +22,10 @@
         android:src="@drawable/btn_redo"
         android:background="@drawable/btn_background_shape"
         android:onClick="dlg_button"
-        android:layout_toLeftOf="@id/dlg_spacer"
-        android:layout_marginRight="16dp"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="24dp"
         android:padding="8dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@id/dlg_message" />
 
     <ImageButton android:id="@+id/dlg_confirm"
         android:layout_width="wrap_content"
@@ -37,9 +34,9 @@
         android:src="@drawable/btn_done"
         android:background="@drawable/btn_background_shape"
         android:onClick="dlg_button"
-        android:layout_toRightOf="@id/dlg_spacer"
-        android:layout_marginLeft="16dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="24dp"
         android:padding="8dp"
-        android:layout_alignParentBottom="true" />
+        android:layout_below="@id/dlg_message" />
 
 </RelativeLayout>
