Move the save action to the top, to the edit page toolbar. New buttons with material icons for the start page. Improved the confirm dialog

--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -20,17 +20,22 @@
     <ImageButton android:id="@+id/start_gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="24dp"
+        android:padding="12dp"
         android:text="@string/gallery"
-        android:src="@android:drawable/ic_menu_gallery"
+        android:src="@drawable/btn_gallery"
+        android:background="@drawable/btn_background"
         android:onClick="getPhoto"
         android:layout_centerInParent="true" />
 
     <ImageButton android:id="@+id/start_photo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:padding="12dp"
         android:text="@string/photo"
-        android:src="@android:drawable/ic_menu_camera"
+        android:src="@drawable/btn_photo"
+        android:background="@drawable/btn_background"
         android:onClick="getPhoto"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/start_gallery" />
