--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="Retry"
         android:src="@drawable/btn_redo"
-        android:background="@drawable/btn_background_shape"
+        android:background="@drawable/btn_background"
         android:onClick="dlg_button"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="24dp"
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:text="OK"
         android:src="@drawable/btn_done"
-        android:background="@drawable/btn_background_shape"
+        android:background="@drawable/btn_background"
         android:onClick="dlg_button"
         android:layout_alignParentRight="true"
         android:layout_marginRight="24dp"
