--- a/app/src/main/res/drawable/btn_background.xml
+++ b/app/src/main/res/drawable/btn_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_enabled="false" android:color="@color/disabledGray" />
-    <item android:state_selected="true" android:color="@color/disabledGray" />
-    <item android:state_focused="true" android:color="@color/primary" />
-    <item android:state_pressed="true" android:color="@color/accent" />
-    <item android:color="@android:color/transparent" /> <!-- default case -->
-</selector>
+
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <corners android:radius="4dp"/>
+    <stroke android:color="@color/primary" android:width="1dp" />
+    <solid android:color="@drawable/btn_bg_color" />
+</shape>
