--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,5 +19,6 @@
     <color name="primary">#607D8B</color>
     <color name="primaryDark">#37474F</color>
     <color name="accent">#42A5F5</color>
+    <color name="bg_accent">#8842A5F5</color>
     <color name="disabledGray">#BDBDBD</color>
 </resources>
